# exactdiagg

./: CMakeLists.txt  README.md  exactdiagg.pro  main.cpp
exactdiagg/: all.h  fockbasis.h  hamsolver.h  lanczos.h  qoperator.h  symmetrygroup.h
examples/: all.h  example_2qd.cpp  example_hubbard.cpp  example_hubbard2.cpp  example_irlm.cpp  example_tb.cpp  example_tb.h  parameters.cpp  parameters.h  plot_toro.gnuplot  torou.cpp  torou.h
examples/example_hernan/: example_hernan.cpp  parameters.cpp  parameters.h
examples/example_nair/: cadenitaaa3.h  cadenitaaa5open.h  example_cadenaAA3.cpp  example_cadenaAA5Open.cpp  param.txt
examples/example_nair/docs/: cadenita5.lyx
